--- a/MISandInvoicingSystem/pom.xml
+++ b/MISandInvoicingSystem/pom.xml
@@ -58,11 +58,24 @@
 	</dependencies>
 
 	<build>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+                          <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-wrapper-plugin</artifactId>
+      <version>3.1.1</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>wrapper</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
 		</plugins>
 	</build>
 
